Name the closure shape of every selector the macOS bridge installs and hold it against the dump's encoding, the install and the source, because selectors were tied to the dump by name only and a closure of the wrong shape compiled, passed every test and would misread a return register on a Mac (macos-A review).
What was found at 7a1727a: the encoding handed to class_addMethod is read at run time, but nothing
checked that the closure installed under it was written for that encoding (addBool for B16@0:8,
addLong for q16@0:8, addRange for {_NSRange=QQ}16@0:8, CellAt for @32@0:8q16q24, ...). The source
scan in AxSelectorsTest also added AxActions.selectors() to the installed set unconditionally, so it
passed with installActions' loop deleted, and could not see a selector passed through a variable,
which would then be refused only at run time, on a Mac. The review is right on both counts; the
setter items to come (v20@0:8B16, v24@0:8@16) would add shapes.

What changed:
- AxSelectors.Kind names the eight closure shapes in use (ID, BOOL, INTEGER, RANGE, ID_OF_ID,
  BOOL_OF_SELECTOR, ID_OF_TWO_INTEGERS, ID_OF_POINT); every listed selector has one (kindOf), and
  AxSelectors.refusal(selector, kind) says why an install is refused: unlisted, or another shape.
- AxElementClass: every closure class declares its Kind; addMethod takes only such a closure and
  refuses one whose kind is not the selector's listed kind, as it already refused an unlisted one.
- AxConstantsTest.everyInstalledSelectorsEncodingInTheDumpIsTheShapeOfItsClosure: each Kind's
  encoding in the dump's spelling (read on the macOS 26.6.2 guest 2026-09-13, the committed
  appkit-constants.txt), and every installed selector the dump reads must have exactly its listed
  shape's encoding. The owed legacy pair is skipped until the regeneration reads it.
- AxSelectorsTest's scan reads each install's shape from its helper, or from the declared type of the
  closure variable handed to addMethod, matches the one `for (S